Hidden overflow to stop scrolling

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -200,6 +200,7 @@ body {
   padding-top: 136px;
   display: flex;
   align-items: flex-end;
+  overflow: hidden;
 }
 
 .page__heading {
